Fixed formatting of portfolio images and overlayed banners on portfolio.html but now my nav bar is too high

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
     padding: 0;
     position: sticky;
     top: 0;
+    z-index: 2;
 }
 
 /* Navbar Container */
@@ -97,6 +98,8 @@ body {
 .portfolioHeader {
     color:#4aaaa5;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 hr {
@@ -129,28 +132,65 @@ input[type=submit] {
     font-size: 17px;}
 
 .portfolioContainer {
-    width: 700px;
+    width: 800px;
+    height: 800px;
 }
 
 img {
     float: left;
     margin: 15px;
+    z-index: -1;
 }
 
-.plabel {
+.plabel1,
+.plabel2,
+.plabel3,
+.plabel4,
+.plabel5 {
     background: #4aaaa5;
     color: #ffffff;
-    font-size: 17px;
+    font-size: 20px;
     text-align: center;
     width: 300px;
     height: 70px;
     position: absolute;
     left: 15px;
-    bottom: 30px;
+    bottom: 20px;
+    float: left;
+    z-index: 1;
 }
 
-.imgContainer {
+
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #777777;
+    color: white;
+    text-align: center;
+    border-top: 7px solid #4aaaa5;
+    z-index: 2;
+}
+
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+
+
+
+.imgContainer1,
+.imgContainer2,
+.imgContainer3,
+.imgContainer4,
+.imgContainer5 {
     float: left;
     width: 315px;
+    height: 230px;
     position: relative;
+    margin: 15px;
 }
